compiler/tests/fail/register_allocation/x86-64/force_regalloc_self_contradict.jazz
export fn main(reg u64 a) -> reg u64 {
  #[force_regalloc=RAX, force_regalloc_conflict=RAX] reg u64 x;
  reg u64 r;
  x = 1;
  x += a;
  r = x;
  return r;
}
